--- a/frontend/react_final_task_frontend/src/css/bestsellers.css
+++ b/frontend/react_final_task_frontend/src/css/bestsellers.css
@@ -58,10 +58,10 @@ h4 {
 .cart-button {
   display: inline-block;
   padding: 0.8rem 1.5rem;
-  background-color: #748c69;
+  background-color: black;
   color: white;
   text-decoration: none;
-  border-radius: 4px;
+  border-radius: 14px;
   font-weight: bold;
   transition: background-color 0.3s ease;
   cursor: pointer;
