--- a/frontend/react_final_task_frontend/src/css/footer.css
+++ b/frontend/react_final_task_frontend/src/css/footer.css
@@ -1,12 +1,17 @@
 .footer {
   padding: 20px 0;
   text-align: center;
+
+  bottom: 0;
+  width: 100%;
+  height: 80px;
 }
 
 .footer-container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
+  height: 0.5rem;
 }
 
 .footer p {
