--- a/frontend/react_final_task_frontend/src/css/navigation.css
+++ b/frontend/react_final_task_frontend/src/css/navigation.css
@@ -66,8 +66,9 @@
   }
 
   .nav-list {
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    gap: 40px;
   }
 
   .nav-list li {
